// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Alert danger renders correctly 1`] = `
<jest>
  <div
    class="alert alert-danger d-flex align-items-center alert-dismissible fade show"
    role="alert"
  >
    <svg
      class="flex-shrink-0 me-3 mt-1 align-self-start bi icon--s"
    >
      <use
        xlink:href="/icons.svg#dash-circle-fill"
      />
    </svg>
    <div
      class="alert-content flex-grow-1"
    >
      <h4
        class="alert-heading"
      >
        Hey there!
      </h4>
      This is an alert — 
      <strong>
        check it out!
      </strong>
      <hr />
      Whenever you need to, be sure to use margin utilities to keep things nice and tidy.
    </div>
    <button
      aria-label="Close"
      class="btn-close"
      data-bs-dismiss="alert"
      type="button"
    />
  </div>
</jest>
`;

exports[`OE - Alert dark renders correctly 1`] = `
<jest>
  <div
    class="alert alert-dark d-flex align-items-center alert-dismissible fade show"
    role="alert"
  >
    <svg
      class="flex-shrink-0 me-3 mt-1 align-self-start bi icon--s"
    >
      <use
        xlink:href="/icons.svg#info-circle-fill"
      />
    </svg>
    <div
      class="alert-content flex-grow-1"
    >
      <h4
        class="alert-heading"
      >
        Hey there!
      </h4>
      This is an alert — 
      <strong>
        check it out!
      </strong>
      <hr />
      Whenever you need to, be sure to use margin utilities to keep things nice and tidy.
    </div>
    <button
      aria-label="Close"
      class="btn-close"
      data-bs-dismiss="alert"
      type="button"
    />
  </div>
</jest>
`;

exports[`OE - Alert info renders correctly 1`] = `
<jest>
  <div
    class="alert alert-info d-flex align-items-center alert-dismissible fade show"
    role="alert"
  >
    <svg
      class="flex-shrink-0 me-3 mt-1 align-self-start bi icon--s"
    >
      <use
        xlink:href="/icons.svg#info-circle-fill"
      />
    </svg>
    <div
      class="alert-content flex-grow-1"
    >
      <h4
        class="alert-heading"
      >
        Hey there!
      </h4>
      This is an alert — 
      <strong>
        check it out!
      </strong>
      <hr />
      Whenever you need to, be sure to use margin utilities to keep things nice and tidy.
    </div>
    <button
      aria-label="Close"
      class="btn-close"
      data-bs-dismiss="alert"
      type="button"
    />
  </div>
</jest>
`;

exports[`OE - Alert light renders correctly 1`] = `
<jest>
  <div
    class="alert alert-light d-flex align-items-center alert-dismissible fade show"
    role="alert"
  >
    <svg
      class="flex-shrink-0 me-3 mt-1 align-self-start bi icon--s"
    >
      <use
        xlink:href="/icons.svg#info-circle-fill"
      />
    </svg>
    <div
      class="alert-content flex-grow-1"
    >
      <h4
        class="alert-heading"
      >
        Hey there!
      </h4>
      This is an alert — 
      <strong>
        check it out!
      </strong>
      <hr />
      Whenever you need to, be sure to use margin utilities to keep things nice and tidy.
    </div>
    <button
      aria-label="Close"
      class="btn-close"
      data-bs-dismiss="alert"
      type="button"
    />
  </div>
</jest>
`;

exports[`OE - Alert primary renders correctly 1`] = `
<jest>
  <div
    class="alert alert-primary d-flex align-items-center alert-dismissible fade show"
    role="alert"
  >
    <svg
      class="flex-shrink-0 me-3 mt-1 align-self-start bi icon--s"
    >
      <use
        xlink:href="/icons.svg#info-circle-fill"
      />
    </svg>
    <div
      class="alert-content flex-grow-1"
    >
      <h4
        class="alert-heading"
      >
        Hey there!
      </h4>
      This is an alert — 
      <strong>
        check it out!
      </strong>
      <hr />
      Whenever you need to, be sure to use margin utilities to keep things nice and tidy.
    </div>
    <button
      aria-label="Close"
      class="btn-close"
      data-bs-dismiss="alert"
      type="button"
    />
  </div>
</jest>
`;

exports[`OE - Alert renders correctly without animation for the close button 1`] = `
<jest>
  <div
    class="alert alert-primary d-flex align-items-center alert-dismissible"
    role="alert"
  >
    <svg
      class="flex-shrink-0 me-3 mt-1 align-self-start bi icon--s"
    >
      <use
        xlink:href="/icons.svg#info-circle-fill"
      />
    </svg>
    <div
      class="alert-content flex-grow-1"
    >
      <h4
        class="alert-heading"
      >
        Hey there!
      </h4>
      This is an alert — 
      <strong>
        check it out!
      </strong>
      <hr />
      Whenever you need to, be sure to use margin utilities to keep things nice and tidy.
    </div>
    <button
      aria-label="Close"
      class="btn-close"
      data-bs-dismiss="alert"
      type="button"
    />
  </div>
</jest>
`;

exports[`OE - Alert renders correctly without close button 1`] = `
<jest>
  <div
    class="alert alert-primary d-flex align-items-center fade show"
    role="alert"
  >
    <svg
      class="flex-shrink-0 me-3 mt-1 align-self-start bi icon--s"
    >
      <use
        xlink:href="/icons.svg#info-circle-fill"
      />
    </svg>
    <div
      class="alert-content flex-grow-1"
    >
      <h4
        class="alert-heading"
      >
        Hey there!
      </h4>
      This is an alert — 
      <strong>
        check it out!
      </strong>
      <hr />
      Whenever you need to, be sure to use margin utilities to keep things nice and tidy.
    </div>
  </div>
</jest>
`;

exports[`OE - Alert secondary renders correctly 1`] = `
<jest>
  <div
    class="alert alert-secondary d-flex align-items-center alert-dismissible fade show"
    role="alert"
  >
    <svg
      class="flex-shrink-0 me-3 mt-1 align-self-start bi icon--s"
    >
      <use
        xlink:href="/icons.svg#info-circle-fill"
      />
    </svg>
    <div
      class="alert-content flex-grow-1"
    >
      <h4
        class="alert-heading"
      >
        Hey there!
      </h4>
      This is an alert — 
      <strong>
        check it out!
      </strong>
      <hr />
      Whenever you need to, be sure to use margin utilities to keep things nice and tidy.
    </div>
    <button
      aria-label="Close"
      class="btn-close"
      data-bs-dismiss="alert"
      type="button"
    />
  </div>
</jest>
`;

exports[`OE - Alert success renders correctly 1`] = `
<jest>
  <div
    class="alert alert-success d-flex align-items-center alert-dismissible fade show"
    role="alert"
  >
    <svg
      class="flex-shrink-0 me-3 mt-1 align-self-start bi icon--s"
    >
      <use
        xlink:href="/icons.svg#check-circle-fill"
      />
    </svg>
    <div
      class="alert-content flex-grow-1"
    >
      <h4
        class="alert-heading"
      >
        Hey there!
      </h4>
      This is an alert — 
      <strong>
        check it out!
      </strong>
      <hr />
      Whenever you need to, be sure to use margin utilities to keep things nice and tidy.
    </div>
    <button
      aria-label="Close"
      class="btn-close"
      data-bs-dismiss="alert"
      type="button"
    />
  </div>
</jest>
`;

exports[`OE - Alert warning renders correctly 1`] = `
<jest>
  <div
    class="alert alert-warning d-flex align-items-center alert-dismissible fade show"
    role="alert"
  >
    <svg
      class="flex-shrink-0 me-3 mt-1 align-self-start bi icon--s"
    >
      <use
        xlink:href="/icons.svg#exclamation-triangle-fill"
      />
    </svg>
    <div
      class="alert-content flex-grow-1"
    >
      <h4
        class="alert-heading"
      >
        Hey there!
      </h4>
      This is an alert — 
      <strong>
        check it out!
      </strong>
      <hr />
      Whenever you need to, be sure to use margin utilities to keep things nice and tidy.
    </div>
    <button
      aria-label="Close"
      class="btn-close"
      data-bs-dismiss="alert"
      type="button"
    />
  </div>
</jest>
`;
